--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Verbose Guacamole
-repo_url: https://github.com/benjaminbhollon/verbose-guacamole
+repo_url: https://github.com/benjaminbhollon/verbose-guacamole-docs
 copyright: Verbose Guacamole is licensed under GPL-3.0
 theme:
   name: readthedocs
@@ -7,3 +7,5 @@ markdown_extensions:
     - toc:
         permalink: "#"
 edit_uri: edit/develop/docs/
+site_description: The documentation for Verbose Guacamole, the Markdown and Git powered novel editor.
+site_author: Benjamin Hollon and the Verbose Guacamole contributors
